<resources>
    <string name="app_name">Calendaric</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_new_task">NewTaskActivity</string>
    <string name="add_title">Add title</string>
    <string name="starts_at">Starts at</string>
    <string name="ends_at">Ends at</string>
    <string name="details">Details</string>
    <string name="all_day">All-day</string>
    <string name="location">Location</string>
    <string name="status">Status</string>
    <string name="menu_week_view">Week</string>
    <string name="menu_month_view">Month</string>

    <string name="preference_file_key">xyz.majorov.calendaric.PREFERENCE_FILE_KEY</string>
    <string name="preference_firebase_token">xyz.majorov.calendaric.PREFERENCE_FIREBASE_TOKEN</string>
    <string name="log_out">Log out</string>
    <string name="sign_in">Sign in</string>
    <string name="delete">Delete</string>
    <string name="edit_event">Edit event</string>
    <string name="create_event">Create event</string>
    <string name="before">Before</string>
    <string name="after">After</string>

    <string-array name="recur_array">
        <item>Do not repeat</item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every month</item>
        <item>Every year</item>
        <item>Custom rule</item>
    </string-array>
</resources>
