<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_week_view"
                android:icon="@drawable/ic_view_week_black_24dp"
                android:title="@string/menu_week_view"/>
        <item
                android:id="@+id/nav_month_view"
                android:icon="@drawable/ic_grid_on_black_24dp"
                android:title="@string/menu_month_view"/>
    </group>

    <item
            android:id="@+id/log_out_view"
            android:icon="@drawable/ic_clear_black_24dp"
            android:title="@string/log_out"/>
    <item
            android:id="@+id/sign_in_view"
            android:icon="@drawable/ic_input_black_24dp"
            android:title="@string/sign_in"/>
</menu>
