<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_new_event"
        tools:context=".EventActivity" android:orientation="vertical" android:gravity="top"
        android:id="@+id/linearLayout">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/nameText"
            android:hint="@string/add_title"
            android:background="@null"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
            android:layout_marginStart="56dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:importantForAutofill="no" android:textColor="@color/black"/>

    <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="#32000000"
            android:id="@+id/view"
            tools:layout_editor_absoluteX="0dp"
            app:layout_constraintTop_toBottomOf="@+id/nameText" android:layout_marginTop="24dp"
    />
    <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="#32000000"
            android:id="@+id/view2" tools:layout_editor_absoluteX="0dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerRecur" android:layout_marginTop="16dp"/>

    <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="#32000000"
            android:id="@+id/view3" tools:layout_editor_absoluteX="-16dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/detailsText"/>
    <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="#32000000"
            android:id="@+id/view4" tools:layout_editor_absoluteX="0dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/locationText"/>
    <TextView
            android:text="00:00"
            android:layout_width="100dp"
            android:layout_height="wrap_content" android:id="@+id/startedAtTimeView"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/allDaySwitch"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:textAlignment="textEnd" android:textColor="@color/black"/>
    <TextView
            android:text="@string/starts_at"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/startedAtView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="56dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/allDaySwitch"
            app:layout_constraintEnd_toStartOf="@+id/startedAtTimeView" android:layout_marginEnd="16dp"
            android:textColor="@color/black"/>
    <TextView
            android:text="00:00"
            android:layout_width="100dp"
            android:layout_height="wrap_content" android:id="@+id/endedAtTimeView"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/startedAtTimeView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:textAlignment="textEnd" android:textColor="@color/black"/>
    <TextView
            android:text="@string/ends_at"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/endedAtView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="56dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/startedAtView"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toStartOf="@+id/endedAtTimeView"
            android:textColor="@color/black"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/detailsText"
            android:hint="@string/details"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/view2" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:drawableStart="@drawable/ic_textsms_black_24dp"
            android:drawablePadding="16dp" android:background="@null" android:singleLine="false"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:inputType="text"
            android:importantForAutofill="no" android:textColor="@color/black"/>
    <Switch
            android:text="@string/all_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/allDaySwitch" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/view" app:layout_constraintHorizontal_bias="0.0"
            android:drawableStart="@drawable/ic_access_time_black_24dp" android:drawablePadding="16dp"
            android:textColor="@color/black"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/locationText"
            android:hint="@string/location"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/view3" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:drawableStart="@drawable/ic_location_on_black_24dp"
            android:drawablePadding="16dp" android:background="@null" android:singleLine="false"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:importantForAutofill="no"
            android:textColor="@color/black"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/statusText"
            android:hint="@string/status"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/view4" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:drawableStart="@drawable/ic_spellcheck_black_24dp"
            android:drawablePadding="16dp" android:background="@null" android:singleLine="false"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" android:importantForAutofill="no"
            android:textColor="@color/black"/>
    <Spinner
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerRecur" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/endedAtView"
            app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="16dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_replay_black_24dp"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/view2" android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>